--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^5.5.5",
     "firebase": "^12.6.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
