--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.9.6",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.10",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
